# mdbook-graphviz

./: .gitignore  Cargo.toml  Makefile  Readme.md  justfile
.github/workflows/: ci.yml  release-drafter.yml  release.yml
book/: book.toml
book/css/: svg.css
book/js/: svg.js
book/src/: examples.md
crates/mdbook-d2/: .gitignore  Cargo.toml  build.rs  go.mod  go.sum  justfile
crates/mdbook-d2/src/: main.rs  renderer.rs
crates/mdbook-d2/src/d2_sys/: Cargo.toml  Readme.md  compile.rs  error.rs  lib.go  lib_test.go  mod.rs  render.rs
crates/mdbook-graphviz/: Cargo.toml
crates/mdbook-graphviz/src/: main.rs  renderer.rs
crates/mdbook-graphviz/test-output/: placeholder
crates/mdbook-svg-inline-preprocessor/: Cargo.toml  justfile  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
crates/mdbook-svg-inline-preprocessor/css/: index.css  svg-shadow.css  svg.css
crates/mdbook-svg-inline-preprocessor/src/: lib.rs  preprocessor.rs  renderer.rs  svg_inline.rs
crates/mdbook-svg-inline-preprocessor/ts/: declarations.d.ts  index.ts  svg.ts  viewer.ts
sample/: book.toml
sample/src/: SUMMARY.md
src/: lib.rs  main.rs  preprocessor.rs  renderer.rs
