[package]
name = "mdbook-graphviz"
version = "0.1.6"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = "mdbook preprocessor to add graphviz support"
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/mdbook-graphviz"
repository = "https://github.com/dylanowen/mdbook-graphviz"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "^0.4.37"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
pulldown-cmark-to-cmark = "11.2"

lazy_static = "1.4.0"
regex = "1.10"
toml = "0.8"

tokio = { version = "1.36", features = ["process"] }
futures = "0.3"
async-trait = "0.1"
async-recursion = "1.0"

[dev-dependencies]
tokio = { version = "1.36", features = ["process", "time"] }

[patch.crates-io]
pulldown-cmark-to-cmark = { git = "https://github.com/max-heller/pulldown-cmark-to-cmark.git", branch = "update-pulldown-cmark" }
