[package]
name = "mdbook-graphviz"
version = "0.3.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = "mdbook preprocessor to add graphviz support"
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/mdbook-graphviz"
repository = "https://github.com/dylanowen/mdbook-graphviz"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook-preprocessor = "^0.5.2"
mdbook-markdown = "^0.5.2"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark-to-cmark = "22.0"

lazy_static = "1.5"
regex = "1.12"
toml = "0.8"

tokio = { version = "1.48", features = ["io-util", "process", "rt-multi-thread"] }
futures = "0.3"
async-recursion = "1.1"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "time"] }
